# ProcessingML

./: .gitignore  README.md  dune-project  processingml.opam
app/: compiler.ml  compiler.mli  dune  processingml.ml  runner.ml  runner.mli
samples/: .gitignore
samples/first/: first.ml
samples/hello/: hello.ml
samples/input/: input.ml
samples/shapes/: shapes.ml
tests/: dune  tests.ml
