opam-version: "1.2"
version: "0.6"
maintainer: "basile.pesin@gmail.com"
authors: ["Basile Pesin"]
homepage: "https://github.com/Vertmo/processingml"
bug-reports: "https://github.com/Vertmo/processingml/issues"
dev-repo: "https://github.com/Vertmo/processingml.git"
depends: ["ocaml" "ocamlfind" "dune"]
license: "GNU LGPLv3.0"
build: ["dune" "build" "@install"]
